--- a/hello.html
+++ b/hello.html
@@ -3,6 +3,11 @@
 
     <head>
         <title>Hello</title>
+        <style>
+            h1 {
+                color: blue;
+            }
+        </style>
     </head>
 
     <body>
